--- a/app/src/main/res/drawable/round_image.xml
+++ b/app/src/main/res/drawable/round_image.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:innerRadius="0dp"
+    android:shape="ring"
+    android:thicknessRatio="1"
+    android:useLevel="false"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@android:color/transparent" /> <stroke android:width="100dp" android:color="#FFFFFFFF" />
 
-</selector>
+
+</shape>
