--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,17 +17,16 @@
         android:layout_marginLeft="0dp"
         android:layout_marginTop="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="10dp"
         android:indeterminate="true"
         android:visibility="invisible" />
 
     <ImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="24dp"
-        android:contentDescription="TODO"
-        android:src="@drawable/ic_launcher_background" />
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:src="@drawable/splash1" />
 
     <EditText
         android:id="@+id/login_email"
@@ -66,6 +65,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="10dp"
         android:backgroundTint="@color/Secondary"
         android:text="@string/btn_login"
         android:textColor="#000000" />
@@ -76,8 +76,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="10dp"
         android:backgroundTint="#ffffff"
         android:text="Register Account"
         android:textColor="@color/Secondary" />
