--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.RegisterActivity">
-    
+    android:gravity="center"
+    tools:context=".Activities.RegisterActivity"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
+
+    <ProgressBar
+        android:id="@+id/register_progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="0dp"
+        android:indeterminate="true"
+        android:visibility="invisible" />
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:src="@drawable/splash1" />
+
+    <EditText
+        android:id="@+id/reg_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:backgroundTint="@color/White"
+        android:hint="@string/Login_Email"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="15dp"
+        android:textColor="@color/White"
+        android:textColorHint="@color/White"
+        android:textSize="18sp"
+        android:importantForAutofill="no" />
+
+    <EditText
+        android:id="@+id/password_reg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="8dp"
+        android:backgroundTint="@color/White"
+        android:hint="@string/password_login"
+        android:inputType="textPassword"
+        android:paddingLeft="15dp"
+        android:textColor="@color/White"
+        android:textColorHint="@color/White"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/password_reg_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="8dp"
+        android:backgroundTint="@color/White"
+        android:hint="@string/reg_confirm_password"
+        android:inputType="textPassword"
+        android:paddingLeft="15dp"
+        android:textColor="@color/White"
+        android:textColorHint="@color/White"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/reg_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/Secondary"
+        android:text="@string/btn_register"
+        android:textColor="#000000" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_reg_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="#ffffff"
+        android:text="@string/btn_register_2"
+        android:textColor="@color/Secondary" />
+
+
+</LinearLayout>
