--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -48,5 +48,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/setup_image" />
 
+    <Button
+        android:id="@+id/button_setup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/Secondary"
+        android:backgroundTint="@color/Secondary"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="12dp"
+        android:padding="15dp"
+        android:layout_marginRight="12dp"
+        android:text="@string/text_of_btn_setup"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
