--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -28,6 +28,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
+        android:maxLines="100"
         android:inputType="textPersonName"
         android:hint="@string/post_hint"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +57,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/edit_post"
-        android:onClick="onClick"/>
+        />
 
     <com.google.android.material.chip.Chip
         android:id="@+id/chip_medium"
