--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:id="@+id/add_post_btn"
-        android:layout_margin="15dp"
+        android:layout_marginBottom="65dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/ic_add_white_24dp"
         app:backgroundTint="@color/Secondary" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/mainBottomNav"
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/colorPrimary"></com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
