--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
 
 
     <androidx.appcompat.widget.Toolbar
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,10 +26,20 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/mainBottomNav"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
+        app:menu="@menu/bottom_menu"
         android:layout_gravity="bottom"
-        android:background="@color/colorPrimary"></com.google.android.material.bottomnavigation.BottomNavigationView>
+        android:background="@color/colorPrimary"
+        app:itemTextColor="@color/White"
+        app:showAsAction="always"></com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <FrameLayout
+        android:id="@+id/main_cointer"
+        android:layout_width="match_parent"
+        android:layout_height="549dp"
+        android:layout_marginTop="51dp">
+
+    </FrameLayout>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
