--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -73,6 +73,7 @@
 
     <com.google.android.material.chip.Chip
         android:id="@+id/chip_high"
+        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -80,8 +81,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/chip_high"
         app:layout_constraintStart_toEndOf="@+id/chip_medium"
-        app:layout_constraintTop_toBottomOf="@+id/edit_post"
-        style="@style/Widget.MaterialComponents.Chip.Choice"/>
+        app:layout_constraintTop_toBottomOf="@+id/edit_post" />
 
     <Button
         android:id="@+id/post_btn"
@@ -99,11 +99,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_post" />
 
-
     <ProgressBar
         android:id="@+id/progress_bar_post"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible"/>
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
