--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#4A6572</color>
     <color name="Secondary">#F9AA33</color>
     <color name="White">#ffffff</color>
+    <color name="colorProgressBarr">#F9AA33</color>
 
 </resources>
 
